<resources>
    <string name="app_name">Oljenkorsi</string>
    <string name="accuracyTextView">Tämän tekstin tilalle päivittyy paikannuksen tarkkuus</string>
    <string name="lokaatioTextView">Tämän tekstin tilalle päivittyy sijainti</string>
    <string name="lokaatioTypeTextView">Tämän tekstin tilalle päivittyy paikannustapa</string>
    <string name="locationNotReady">Lähetyspainike aktivoituu, kun paikannus on valmis.</string>
    <string name="phoneNumbersMissing">Lisää vähintään yksi puhelinnumero asetusten kautta.</string>
    <string name="smsSentOrNot1">Tekstiviestejä ei lähetetty.</string>
    <string name="smsSentOrNot2">Tekstiviesti lähetetty.</string>
    <string name="smsSentOrNot3">Myös tarkempi sijainti lähetetty.</string>
    <string name="showOnMap">Näytä kartalla</string>
    <string name="button">Pyydä apua</string>
    <string name="button2">Asetukset</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Asetukset</string>
    <string name="location_not_ready">Paikannustietoja ei ole vielä saatavilla.</string>
    <string name="message_pref_default">Apua, hätätilanne! Karttaa klikkaamalla näet sijaintini.</string>
    <string name="message__default2">Tässä edellistä tarkemmat koordinaattini.</string>
    <string name="message_pref_title">Lähetettävä viesti</string>
    <string name="double_message_key">double_message</string>
    <string name="double_message_pref_key">pref_double_message</string>
    <string name="double_message_pref_title">Salli automaattiviestit</string>
    <string name="double_message_text_default">Ei sallittu</string>
    <string name="double_message_text_2">Sallittu</string>
    <string name="message_pref">message_pref</string>
    <string name="preference_key">preference_key</string>
    <string name="number1_pref">number_1</string>
    <string name="number2_pref">number_2</string>
    <string name="number3_pref">number_3</string>
    <string name="number4_pref">number_4</string>
    <string name="number5_pref">number_5</string>
    <string name="number1_pref_default">1. puhelinnumero</string>
    <string name="number2_pref_default">2. puhelinnumero</string>
    <string name="number3_pref_default">3. puhelinnumero</string>
    <string name="number4_pref_default">4. puhelinnumero</string>
    <string name="number5_pref_default">5. puhelinnumero</string>
    <string name="number1_name"></string>
    <string name="number2_name"></string>
    <string name="number3_name"></string>
    <string name="number4_name"></string>
    <string name="number5_name"></string>
    <string name="number_field_default">(tarvittaessa)</string>
    <string name="reset_pref">reset_pref</string>
    <string name="reset_pref_title">Palauta oletusasetukset</string>
    <string name="message_sending_status">MESSAGE_SENDING_SHARED_PREFERENCES</string>
    <string name="last_sent_location_accuracy_shared_preference_key">last_sent_accuracy</string>




    <string name="pref_size_key" translatable="false">size</string>


</resources>

