<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"


    >


    <Preference
        android:background="@drawable/back"
        android:defaultValue="@string/number1_pref_default"
        android:icon="@mipmap/ic_contacts"
        android:key="@string/number1_pref"

        android:title="Prööt"
        />

    <Preference
        android:defaultValue="@string/number2_pref_default"
        android:icon="@mipmap/ic_contacts"
        android:key="@string/number2_pref"
        android:title="Prööt"
        />

    <Preference
        android:defaultValue="@string/number3_pref_default"
        android:icon="@mipmap/ic_contacts"
        android:key="@string/number3_pref"
        android:title="Prööt" />

    <Preference
        android:defaultValue="@string/number4_pref_default"
        android:icon="@mipmap/ic_contacts"
        android:key="@string/number4_pref"
        android:title="Prööt" />

    <Preference
        android:defaultValue="@string/number5_pref_default"
        android:icon="@mipmap/ic_contacts"
        android:key="@string/number5_pref"
        android:title="Prööt"

        />


    <EditTextPreference
        android:icon="@mipmap/ic_contacts"
        android:background="@drawable/border"
        android:key="@string/message_pref"
        android:defaultValue="@string/message_pref_default"
       />

</PreferenceScreen>
