<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textViewVerticalMargin"
        android:text="@string/accuracyTextView"
        android:textSize="@dimen/fontSize"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textViewHorizontalMargin"
        android:layout_marginLeft="@dimen/textViewHorizontalMargin"
        android:layout_marginTop="@dimen/textViewVerticalMargin"
        android:layout_marginEnd="@dimen/textViewHorizontalMargin"
        android:layout_marginRight="@dimen/textViewHorizontalMargin"
        android:text="@string/lokaatioTextView"
        android:textSize="@dimen/fontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textViewVerticalMargin"
        android:text="@string/timeTextView"
        android:textSize="@dimen/fontSize"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="@dimen/buttonDim"
        android:layout_height="@dimen/buttonDim"
        android:background="@drawable/button_help"
        android:layout_marginTop="@dimen/textViewVerticalMargin"
        android:layout_marginEnd="@dimen/textViewHorizontalMargin"
        android:layout_marginRight="@dimen/textViewHorizontalMargin"
        android:text="@string/button"
        android:textSize="@dimen/actionButtonFontSize"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/buttonDim"
        android:layout_height="@dimen/buttonDim"
        android:background="@drawable/button_settings"
        android:layout_marginTop="@dimen/textViewVerticalMargin"
        android:layout_marginEnd="@dimen/textViewHorizontalMargin"
        android:layout_marginRight="@dimen/textViewHorizontalMargin"
        android:text="@string/button2"
        android:textSize="@dimen/actionButtonFontSize"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/textViewVerticalMargin"
        android:text="@string/locationNotReady"
        android:textSize="@dimen/fontSize"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</android.support.constraint.ConstraintLayout>